--- a/.github/workflows/fork-sync.yml
+++ b/.github/workflows/fork-sync.yml
@@ -22,7 +22,7 @@ jobs:
         upstream_repository: paulrberg/solidity-template
         upstream_branch: main
         target_branch: main
-        git_pull_args: --ff-only
+        git_pull_args: --allow-unrelated-histories
 
     - name: Timestamp
       run: date
